Fix 'next' button wrapping around

--- a/src/client/css-styles/styles-home.css
+++ b/src/client/css-styles/styles-home.css
@@ -23,7 +23,7 @@
 
 #search-bar-text {
 
-    width: 80%;
+    width: calc(100% - 75px - 80px);
     height: 40px;
     padding: 0px 0px 0px 10px;
     margin: 30px 0px 0px 40px;
@@ -31,7 +31,7 @@
 }
 
 #nextBtn {
-    width: 9%;
+    width: 80px;
     height: 40px;
 }
 
